PseudoCodeCompilerParser.java
// Generated from PseudoCodeCompiler.g4 by ANTLR 4.10.1
 import java.util.*;import java.util.ArrayList; import java.util.Scanner;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseudoCodeCompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, STRING=26, ID=27, NUM=28, OP_COMP=29, OP_AD=30, ATRIB=31, SC=32, 
		WS=33;
	public static final int
		RULE_start = 0, RULE_command = 1, RULE_whileLoop = 2, RULE_forLoop = 3, 
		RULE_conditional = 4, RULE_atribution = 5, RULE_declaration = 6, RULE_data = 7, 
		RULE_condition = 8, RULE_op = 9, RULE_basicOp = 10, RULE_read = 11, RULE_write = 12, 
		RULE_type = 13, RULE_bool = 14, RULE_if = 15, RULE_else = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "command", "whileLoop", "forLoop", "conditional", "atribution", 
			"declaration", "data", "condition", "op", "basicOp", "read", "write", 
			"type", "bool", "if", "else"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fim'", "'enquanto'", "'('", "')'", "'{'", "'}'", 
			"'para'", "'/'", "'*'", "'+'", "'-'", "'++'", "'--'", "'ler'", "'imprimir'", 
			"'boleano'", "'texto'", "'real'", "'verdadeiro'", "'falso'", "'Se'", 
			"'se'", "'senao'", "'Senao'", null, null, null, null, null, "'='", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "STRING", "ID", "NUM", "OP_COMP", "OP_AD", "ATRIB", "SC", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudoCodeCompiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Print x = new Print();
		VarArray v = new VarArray();
		Scanner s = new Scanner(System.in);
		int scope = 3;
		
		public void finishStruct(){
			v.removeScope(scope);
			scope--;
			x.printData("\n");
			x.printScopeTabs(scope);
			x.printData("}\n ");
		}
		
		public void startStruct(){
			scope++;
			x.printData("{ \n");
		}
		
		public void throwError(String message, int line){
			throw new RuntimeException(" "+message+" na linha: "+line);
		}
		
		public void checkSC(String sc, int line){
			if(sc.contains("missing"))throwError("Falta ';' linha:",line);
			else x.printSC();
		}

	public PseudoCodeCompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			x.printStart();
			setState(36);
			command();
			setState(37);
			match(T__1);
			x.printEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public List<AtributionContext> atribution() {
			return getRuleContexts(AtributionContext.class);
		}
		public AtributionContext atribution(int i) {
			return getRuleContext(AtributionContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<ConditionalContext> conditional() {
			return getRuleContexts(ConditionalContext.class);
		}
		public ConditionalContext conditional(int i) {
			return getRuleContext(ConditionalContext.class,i);
		}
		public List<WhileLoopContext> whileLoop() {
			return getRuleContexts(WhileLoopContext.class);
		}
		public WhileLoopContext whileLoop(int i) {
			return getRuleContext(WhileLoopContext.class,i);
		}
		public List<ForLoopContext> forLoop() {
			return getRuleContexts(ForLoopContext.class);
		}
		public ForLoopContext forLoop(int i) {
			return getRuleContext(ForLoopContext.class,i);
		}
		public List<WriteContext> write() {
			return getRuleContexts(WriteContext.class);
		}
		public WriteContext write(int i) {
			return getRuleContext(WriteContext.class,i);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(52);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						x.printScopeTabs(scope);
						setState(41);
						atribution();
						x.printData("\n");
						}
						break;
					case T__16:
					case T__17:
					case T__18:
						{
						x.printScopeTabs(scope);
						setState(45);
						declaration();
						x.printData("\n");
						}
						break;
					case T__21:
					case T__22:
						{
						setState(48);
						conditional();
						}
						break;
					case T__2:
						{
						setState(49);
						whileLoop();
						}
						break;
					case T__7:
						{
						setState(50);
						forLoop();
						}
						break;
					case T__15:
						{
						setState(51);
						write();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLoopContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitWhileLoop(this);
		}
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_whileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__2);
			setState(58);
			match(T__3);
			x.printScopeTabs(scope);x.printData("while(");
			setState(60);
			condition();
			setState(61);
			match(T__4);
			x.printData(")");
			setState(63);
			match(T__5);
			startStruct();
			setState(65);
			command();
			setState(66);
			match(T__6);
			finishStruct();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForLoopContext extends ParserRuleContext {
		public Token SC;
		public OpContext op;
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode SC() { return getToken(PseudoCodeCompilerParser.SC, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterForLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitForLoop(this);
		}
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__7);
			setState(70);
			match(T__3);
			x.printScopeTabs(scope);x.printData("for(");scope++;
			setState(72);
			declaration();
			setState(73);
			condition();
			setState(74);
			((ForLoopContext)_localctx).SC = match(SC);
			checkSC((((ForLoopContext)_localctx).SC!=null?((ForLoopContext)_localctx).SC.getText():null),(((ForLoopContext)_localctx).SC!=null?((ForLoopContext)_localctx).SC.getLine():0));
			setState(76);
			((ForLoopContext)_localctx).op = op();
			x.printData((((ForLoopContext)_localctx).op!=null?_input.getText(((ForLoopContext)_localctx).op.start,((ForLoopContext)_localctx).op.stop):null));
			setState(78);
			match(T__4);
			setState(79);
			match(T__5);
			x.printData("){\n");
			setState(81);
			command();
			setState(82);
			match(T__6);
			finishStruct();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public List<IfContext> if_() {
			return getRuleContexts(IfContext.class);
		}
		public IfContext if_(int i) {
			return getRuleContext(IfContext.class,i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			if_();
			x.printScopeTabs(scope);x.printData("if(");
			setState(87);
			match(T__3);
			setState(88);
			condition();
			setState(89);
			match(T__4);
			x.printData(")");
			startStruct();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(92);
				match(T__5);
				}
			}

			setState(95);
			command();
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(96);
				match(T__6);
				}
				break;
			}
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(99);
				else_();
				scope--;x.printScopeTabs(scope);x.printData("}else ");
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(101);
					if_();
					x.printData("if(");
					setState(103);
					match(T__3);
					setState(104);
					condition();
					setState(105);
					match(T__4);
					x.printData("(");
					}
					break;
				}
				startStruct();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(111);
					match(T__5);
					}
				}

				setState(114);
				command();
				setState(116);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(115);
					match(T__6);
					}
					break;
				}
				}
				break;
			}
			finishStruct();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributionContext extends ParserRuleContext {
		public Token ID;
		public DataContext data;
		public ReadContext read;
		public Token SC;
		public TerminalNode ID() { return getToken(PseudoCodeCompilerParser.ID, 0); }
		public TerminalNode ATRIB() { return getToken(PseudoCodeCompilerParser.ATRIB, 0); }
		public TerminalNode SC() { return getToken(PseudoCodeCompilerParser.SC, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public AtributionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterAtribution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitAtribution(this);
		}
	}

	public final AtributionContext atribution() throws RecognitionException {
		AtributionContext _localctx = new AtributionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atribution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			((AtributionContext)_localctx).ID = match(ID);
			setState(123);
			match(ATRIB);
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__19:
			case T__20:
			case STRING:
			case ID:
			case NUM:
			case SC:
				{
				setState(124);
				((AtributionContext)_localctx).data = data();

								v.atribVar((((AtributionContext)_localctx).ID!=null?((AtributionContext)_localctx).ID.getText():null),(((AtributionContext)_localctx).data!=null?_input.getText(((AtributionContext)_localctx).data.start,((AtributionContext)_localctx).data.stop):null), scope, (((AtributionContext)_localctx).data!=null?(((AtributionContext)_localctx).data.start):null).getLine());
								x.printAttribution((((AtributionContext)_localctx).ID!=null?((AtributionContext)_localctx).ID.getText():null),(((AtributionContext)_localctx).data!=null?_input.getText(((AtributionContext)_localctx).data.start,((AtributionContext)_localctx).data.stop):null));
							
				}
				break;
			case T__14:
				{
				x.printAttribution((((AtributionContext)_localctx).ID!=null?((AtributionContext)_localctx).ID.getText():null),"");
				setState(128);
				((AtributionContext)_localctx).read = read();

								v.atribVar((((AtributionContext)_localctx).ID!=null?((AtributionContext)_localctx).ID.getText():null),(((AtributionContext)_localctx).read!=null?_input.getText(((AtributionContext)_localctx).read.start,((AtributionContext)_localctx).read.stop):null), scope, (((AtributionContext)_localctx).read!=null?(((AtributionContext)_localctx).read.start):null).getLine());
						
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(133);
			((AtributionContext)_localctx).SC = match(SC);
			checkSC((((AtributionContext)_localctx).SC!=null?((AtributionContext)_localctx).SC.getText():null),(((AtributionContext)_localctx).SC!=null?((AtributionContext)_localctx).SC.getLine():0));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TypeContext type;
		public Token ID;
		public DataContext data;
		public Token SC;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PseudoCodeCompilerParser.ID, 0); }
		public TerminalNode ATRIB() { return getToken(PseudoCodeCompilerParser.ATRIB, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode SC() { return getToken(PseudoCodeCompilerParser.SC, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((DeclarationContext)_localctx).type = type();
			setState(137);
			((DeclarationContext)_localctx).ID = match(ID);
			setState(138);
			match(ATRIB);
			setState(139);
			((DeclarationContext)_localctx).data = data();

									if(v.parseData((((DeclarationContext)_localctx).data!=null?_input.getText(((DeclarationContext)_localctx).data.start,((DeclarationContext)_localctx).data.stop):null)).equals((((DeclarationContext)_localctx).type!=null?_input.getText(((DeclarationContext)_localctx).type.start,((DeclarationContext)_localctx).type.stop):null))){
										v.addVar(new Variable((((DeclarationContext)_localctx).type!=null?_input.getText(((DeclarationContext)_localctx).type.start,((DeclarationContext)_localctx).type.stop):null),(((DeclarationContext)_localctx).data!=null?_input.getText(((DeclarationContext)_localctx).data.start,((DeclarationContext)_localctx).data.stop):null),scope, (((DeclarationContext)_localctx).ID!=null?((DeclarationContext)_localctx).ID.getText():null)), (((DeclarationContext)_localctx).data!=null?(((DeclarationContext)_localctx).data.start):null).getLine());
										x.printDeclare((((DeclarationContext)_localctx).type!=null?_input.getText(((DeclarationContext)_localctx).type.start,((DeclarationContext)_localctx).type.stop):null), (((DeclarationContext)_localctx).ID!=null?((DeclarationContext)_localctx).ID.getText():null), (((DeclarationContext)_localctx).data!=null?_input.getText(((DeclarationContext)_localctx).data.start,((DeclarationContext)_localctx).data.stop):null)); 
									}else{
										throwError("Valor declarado nao corresponde ao tipo da variavel", (((DeclarationContext)_localctx).data!=null?(((DeclarationContext)_localctx).data.start):null).getLine());
									}
								
			setState(141);
			((DeclarationContext)_localctx).SC = match(SC);
			checkSC((((DeclarationContext)_localctx).SC!=null?((DeclarationContext)_localctx).SC.getText():null),(((DeclarationContext)_localctx).SC!=null?((DeclarationContext)_localctx).SC.getLine():0));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public BasicOpContext basicOp() {
			return getRuleContext(BasicOpContext.class,0);
		}
		public TerminalNode STRING() { return getToken(PseudoCodeCompilerParser.STRING, 0); }
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_data);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				bool();
				}
				break;
			case T__4:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case OP_AD:
			case SC:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			case T__3:
			case ID:
			case NUM:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(146);
					match(T__3);
					}
				}

				setState(149);
				op();
				setState(151);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(150);
					match(T__4);
					}
					break;
				}
				setState(154);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(153);
					basicOp();
					}
					break;
				}
				}
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public Token ID;
		public Token OP_COMP;
		public DataContext data;
		public Token OP_AD;
		public TerminalNode ID() { return getToken(PseudoCodeCompilerParser.ID, 0); }
		public TerminalNode OP_COMP() { return getToken(PseudoCodeCompilerParser.OP_COMP, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public List<TerminalNode> OP_AD() { return getTokens(PseudoCodeCompilerParser.OP_AD); }
		public TerminalNode OP_AD(int i) {
			return getToken(PseudoCodeCompilerParser.OP_AD, i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoCodeCompilerListener ) ((PseudoCodeCompilerListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			((ConditionContext)_localctx).ID = match(ID);
			if(!v.varExists((((ConditionContext)_localctx).ID!=null?((ConditionContext)_localctx).ID.getText():null),scope))throwError("Variavel nao existente nesse escopo", ((ConditionContext)_localctx).ID.getLine());
			setState(161);
			((ConditionContext)_localctx).OP_COMP = match(OP_COMP);
			setState(162);
			((ConditionContext)_localctx).data = data();
